[package]
name = "envchain-rs"
license = "MIT"
authors = ["okkez <okkez000@gmail.com>"]
description = "The Rust version of envchain, but support only Linux secret service."
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }
secret-service = { version = "3", features = ["rt-tokio-crypto-rust"] }
rpassword = "7"
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8" }

[[bin]]
name = "envchain"
path = "src/main.rs"

