[package]
name = "envchain-rs"
license = "MIT"
authors = ["okkez <okkez000@gmail.com>"]
description = "The Rust version of envchain, but support only Linux secret service."
version = "0.1.8"
edition = "2021"
repository = "https://github.com/okkez/envchain-rs"
homepage = "https://github.com/okkez/envchain-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }
secret-service = { version = "4", features = ["rt-tokio-crypto-rust"] }
rpassword = "7"
serde = { version = "1.0.200", features = ["derive"] }
toml = { version = "0.8" }
anyhow = "1.0.86"

[[bin]]
name = "envchain"
path = "src/main.rs"

